@@ -117,7 +117,7 @@ def uuid(args):
         order_by = [] if args.order_by is None else sum(args.order_by, [])
 
         # Find products using the search expression and print the UUIDs of the products found.
-        for product in archive.search(args.expression, order_by, args.limit):
+        for product in archive.search(args.expression, order_by, args.limit, properties=['uuid']):
             print(product.core.uuid)
 
     return 0
@@ -130,7 +130,7 @@ def paths(args):
         order_by = order_by_default if not args.order_by else sum(args.order_by, []) + order_by_default
 
         # Find products using the search expression and print the paths of the products found.
-        products = archive.search(args.expression, order_by, args.limit)
+        products = archive.search(args.expression, order_by, args.limit, properties=['archive_path', 'physical_name'])
         for product in products:
             product_path = archive.product_path(product)
             if product_path is not None:
@@ -180,12 +180,9 @@ def search(args):
                 logging.error("no property: %r defined within namespace: %r" % (name, namespace))
                 return 1
 
-        # Construct a list of the namespaces requested.
-        namespaces = set([namespace for namespace, _ in properties])
-        namespaces.discard("core")
-
         # Find products using the search expression.
-        products = archive.search(args.expression, order_by, args.limit, namespaces=namespaces)
+        products = archive.search(args.expression, order_by, args.limit,
+                                  properties=[".".join(item) for item in properties])
 
         # Output the requested properties of all products matching the search expression in the requested output format.
         if args.output_format == "psv":  # PSV = Pipe Separated Values
